# mscman

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests.yml
mscman/: main.py
tests/: test_basic.py
