[tool.poetry]
name = "mscman"
version = "0.1.0"
description = "Downloads music from different sources and updates songs' metadata"
authors = ["Vladislav Kishkovsky <67899905+aDeepRecession@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
commitizen = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
